Minor fix on head getting cut off on smaller heights

--- a/src/components/CharacterEditor/CharacterEditor.module.css
+++ b/src/components/CharacterEditor/CharacterEditor.module.css
@@ -38,7 +38,7 @@
   position: fixed;
   right: 0;
   width: 35%;
-  bottom: 0;
+  top: 10%;
 }
 
 .character {
